   - jb-wa: article wa
   - jb-wo: article wo

res_config_pgsql
------------------
 * Added the ability to support PostgreSQL application_name on connections.
   This allows PostgreSQL to display the configured name in the
   pg_stat_activity view and CSV log entries. This setting is configurable
   for res_config_pgsql via the dbappname configuration setting in
   res_pgsql.conf.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.4.0 to Asterisk 12.5.0 ------------
------------------------------------------------------------------------------

ARI
------------------
 * Stored recordings now support a new operation, copy. This will take an
   existing stored recording and copy it to a new location in the recordings
   directory.

res_pjsip
------------------
 * The endpoint configuration object now supports 'accountcode'. Any channel
   created for an endpoint with this setting will have its accountcode set
   to the specified value.

Functions
------------------
 * Function AUDIOHOOK_INHERIT has been deprecated. Audiohooks are now
   unconditionally inhereted through masquerades. As a side benefit, more
   than one audiohook of a given type may persist through a masquerade now.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.3.0 to Asterisk 12.4.0 ------------
------------------------------------------------------------------------------

AgentRequest
------------------
 * Returns new AGENT_STATUS value "NOT_CONNECTED" if the agent fails to
   connect with an incoming caller after being alerted to the presence
   of the incoming caller.  The most likely reason this would happen is
   the agent did not acknowledge the call in time.

AMI
------------------
 * New events have been added for the TALK_DETECT function. When the function
   is used on a channel, ChannelTalkingStart/ChannelTalkingStop events will be